@@ -1,3 +1,8 @@
+2003-06-10  Alasdair Allan <aa@astro.ex.ac.uk>
+
+         * Parse.pm: Fixed ra() and dec() which were incorrectly looking
+           for a 'tag_value' keyword inside the Coordinates subtag.
+           
 2003-06-03  Alasdair Allan <aa@astro.ex.ac.uk>
 
         * Build.pm: Added support for Signal-to-noise requests in addition
